--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "better-sqlite3": "^12.2.0",
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "pg": "^8.16.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "recharts": "^3.2.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
+    "@types/pg": "^8.15.5",
     "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.4",
