--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "diveai",
+  "name": "deepdiveai",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -9,6 +9,8 @@
     "preview": "vite preview",
     "db:server": "npx tsx server/index.ts",
     "dev:full": "concurrently \"npm run db:server\" \"npm run dev\""
+  },
+  "dependencies": {
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "better-sqlite3": "^12.2.0",
