--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dev:full": "concurrently \"npm run db:server\" \"npm run dev\""
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "better-sqlite3": "^12.2.0",
@@ -22,6 +23,7 @@
     "recharts": "^3.2.1"
   },
   "devDependencies": {
+    "@types/better-sqlite3": "^7.6.13",
     "@types/node": "^22.14.0",
     "@types/pg": "^8.15.5",
     "@types/react": "^18.3.10",
