--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "pg": "^8.16.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "recharts": "^3.2.1"
+    "recharts": "^3.2.1",
+    "vite": "^6.2.0"
   },
   "devDependencies": {
     "@types/better-sqlite3": "^7.6.13",
@@ -31,7 +32,6 @@
     "@vitejs/plugin-react": "^4.3.4",
     "concurrently": "^9.2.1",
     "tsx": "^4.20.5",
-    "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+    "typescript": "~5.8.2"
   }
 }
